@@ -23,7 +23,7 @@ module DevKitInstaller
           'mingwrt-3.20-mingw32-dll.tar.gz',
           'w32api-3.17-2-mingw32-dev.tar.lzma',
           'autoconf2.1-2.13-4-mingw32-bin.tar.lzma',
-          'autoconf2.5-2.67-1-mingw32-bin.tar.lzma',
+          'autoconf2.5-2.68-1-mingw32-bin.tar.lzma',
           'autoconf-9-1-mingw32-bin.tar.lzma',
           'automake1.11-1.11.1-1-mingw32-bin.tar.lzma',
           'automake-4-1-mingw32-bin.tar.lzma',
@@ -66,7 +66,7 @@ module DevKitInstaller
           'mingwrt-3.20-mingw32-dll.tar.gz',
           'w32api-3.17-2-mingw32-dev.tar.lzma',
           'autoconf2.1-2.13-4-mingw32-bin.tar.lzma',
-          'autoconf2.5-2.67-1-mingw32-bin.tar.lzma',
+          'autoconf2.5-2.68-1-mingw32-bin.tar.lzma',
           'autoconf-9-1-mingw32-bin.tar.lzma',
           'automake1.11-1.11.1-1-mingw32-bin.tar.lzma',
           'automake-4-1-mingw32-bin.tar.lzma',
@@ -104,7 +104,7 @@ module DevKitInstaller
           'gcc-core-3.4.5-20060117-3.tar.gz',
           'gcc-g++-3.4.5-20060117-3.tar.gz',
           'autoconf2.1-2.13-4-mingw32-bin.tar.lzma',
-          'autoconf2.5-2.67-1-mingw32-bin.tar.lzma',
+          'autoconf2.5-2.68-1-mingw32-bin.tar.lzma',
           'autoconf-9-1-mingw32-bin.tar.lzma',
           'automake1.11-1.11.1-1-mingw32-bin.tar.lzma',
           'automake-4-1-mingw32-bin.tar.lzma',
