@@ -1,6 +1,7 @@
 === (in git)
 
 * Enhancements:
+  * Upgraded DevKit autoconf to version 2.68
   * Upgraded DevKit mintty to version 1.0.3
   * Add mingw-32-4.6.2 toolchain support
   * Upgraded OpenSSL to version 1.0.0g
